--- a/Training-VGG.ipynb
+++ b/Training-VGG.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,22 +27,24 @@
     "from keras.models import model_from_json\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
-    "import cv2"
+    "import cv2\n",
+    "from sklearn.metrics import classification_report, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "number of output classes:  101\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "keras.backend.clear_session()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "classes = 101 #(0, 100])\n",
     "print(\"number of output classes: \",classes)"
@@ -55,17 +57,7 @@
    "outputs": [],
    "source": [
     "features=torch.load('./data/features.pt').numpy()\n",
-    "target=torch.load('./data/age.pt').numpy()\n",
-    "gender=torch.load('./data/gender.pt').numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gender_classes = keras.utils.to_categorical(gender, 2)"
+    "target=torch.load('./data/age.pt').numpy()"
    ]
   },
   {
@@ -95,9 +87,7 @@
     "#delete extra data\n",
     "del features\n",
     "del target\n",
-    "del gender\n",
-    "del target_classes\n",
-    "del gender_classes"
+    "del target_classes"
    ]
   },
   {
@@ -131,22 +121,14 @@
     "\n",
     "if aug:\n",
     "    batch_size=32\n",
-    "\n",
     "    datagen = ImageDataGenerator(\n",
-    "\n",
     "            width_shift_range=0.1,\n",
-    "\n",
     "            height_shift_range=0.1,\n",
-    "\n",
     "            horizontal_flip=True,\n",
-    "\n",
     "            preprocessing_function=get_random_eraser(v_l=0, v_h=255))\n",
-    "\n",
+    "    \n",
     "    training_generator = MixupGenerator(train_x, train_y, batch_size=batch_size, alpha=0.2,\n",
-    "\n",
-    "                                            datagen=datagen)()\n",
-    "\n",
-    "\n"
+    "                                            datagen=datagen)()"
    ]
   },
   {
@@ -155,12 +137,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd = keras.optimizers.SGD(lr=1e-2, decay=1e-6, momentum=0.9, nesterov=True)\n",
+    "sgd = keras.optimizers.SGD(lr=1e-3, decay=1e-6, momentum=0.9, nesterov=True)\n",
     "\n",
     "age_model.compile(loss='categorical_crossentropy'\n",
     "                  , optimizer=sgd\n",
     "                  , metrics=['accuracy']\n",
-    "                 )\n"
+    "                 )"
    ]
   },
   {
@@ -174,49 +156,34 @@
     "enableFit = True\n",
     "\n",
     "if enableFit:\n",
-    "    \n",
-    "   \n",
     "    if aug:\n",
-    "      \n",
-    "         score = age_model.fit_generator(generator=training_generator,\n",
-    "\n",
+    "        score = age_model.fit_generator(generator=training_generator,\n",
     "                                   steps_per_epoch=size_train // batch_size,\n",
-    "\n",
     "                                   validation_data=(test_x, test_y),\n",
-    "\n",
     "                                   epochs=epochs, verbose=1)\n",
-    "    \n",
-    "         pd.DataFrame.from_dict(score.history).to_csv('baseline_age_aug.csv')\n",
+    "        pd.DataFrame.from_dict(score.history).to_csv('./outputs/baseline_age_aug.csv')\n",
     "\n",
-    "\n",
-    "         plt.plot(score.history['val_loss'], label='val_loss')\n",
-    "         plt.plot(score.history['loss'], label='train_loss')\n",
-    "         plt.legend(loc='upper right')\n",
-    "         plt.ylim([2.5,5])\n",
-    "         plt.savefig('baseline_age_aug.png')\n",
-    "         plt.show()\n",
+    "        plt.plot(score.history['val_loss'], label='val_loss')\n",
+    "        plt.plot(score.history['loss'], label='train_loss')\n",
+    "        plt.legend(loc='upper right')\n",
+    "        plt.ylim([2.5,5])\n",
+    "        plt.savefig('baseline_age_aug.png')\n",
+    "        plt.show()\n",
     "\n",
     "        \n",
     "    elif baseline:\n",
-    "            \n",
+    "\n",
     "        scores=defaultdict(list)\n",
-    "\n",
     "        score = age_model.fit(train_x, train_y, epochs=epochs, batch_size=batch_size, validation_data=(test_x, test_y))\n",
-    "             \n",
-    "\n",
-    "            \n",
     "        model='_'\n",
     "        age_model.save_weights('./trained_models/baseline_age_'+model+'.h5')\n",
     "        pd.DataFrame.from_dict(scores).to_csv('./outputs/baseline_age_'+model+'.csv')\n",
-    "            \n",
-    "     \n",
-    "        plt.plot(score['loss'], label='loss')\n",
-    "        plt.plot(score['val_loss'], label='val_loss')\n",
+    "\n",
+    "        plt.plot(score.history['loss'], label='loss')\n",
+    "        plt.plot(score.history['val_loss'], label='val_loss')\n",
     "        plt.legend(loc='upper right')   \n",
     "        plt.savefig('./outputs/baseline_age_'+model+'.png')\n",
     "        plt.show()\n",
-    "        \n",
-    "        \n",
     "\n",
     "else:\n",
     "    #pre-trained weights for age prediction: https://drive.google.com/file/d/1YCox_4kJ-BYeXq27uUbasu--yz28zUMV/view?usp=sharing\n",
@@ -252,7 +219,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "mae = 0\n",
@@ -261,10 +230,8 @@
     "for i in range(0 ,apparent_predictions.shape[0]):\n",
     "    prediction = int(apparent_predictions[i])\n",
     "    actual = np.argmax(test_y[i])\n",
-    "    \n",
     "    abs_error = abs(prediction - actual)\n",
     "    actual_mean = actual_mean + actual\n",
-    "    \n",
     "    mae = mae + abs_error\n",
     "    \n",
     "mae = mae / apparent_predictions.shape[0]\n",
@@ -286,10 +253,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "features=torch.load('./data/features.pt').numpy()\n",
+    "gender=torch.load('./data/gender.pt').numpy()\n",
+    "gender_classes = keras.utils.to_categorical(gender, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_x, test_x, train_y, test_y = train_test_split(features, gender_classes, test_size=0.30)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del features\n",
+    "del gender_classes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "aug=False\n",
     "baseline=True\n",
-    "\n",
     "\n",
     "train_x/=255\n",
     "test_x/=255\n",
@@ -302,22 +297,14 @@
     "\n",
     "if aug:\n",
     "    batch_size=32\n",
-    "\n",
     "    datagen = ImageDataGenerator(\n",
-    "\n",
     "            width_shift_range=0.1,\n",
-    "\n",
     "            height_shift_range=0.1,\n",
-    "\n",
     "            horizontal_flip=True,\n",
-    "\n",
     "            preprocessing_function=get_random_eraser(v_l=0, v_h=255))\n",
     "\n",
     "    training_generator = MixupGenerator(train_x, train_y, batch_size=batch_size, alpha=0.2,\n",
-    "\n",
-    "                                            datagen=datagen)()\n",
-    "\n",
-    "\n"
+    "                                            datagen=datagen)()"
    ]
   },
   {
@@ -338,42 +325,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "enableFit = True\n",
     "\n",
     "if enableFit:\n",
-    "\n",
     "    if aug:\n",
-    "         score = gender_model.fit_generator(generator=training_generator,\n",
-    "                                   steps_per_epoch=size_train // batch_size,\n",
-    "                                   validation_data=(test_x, test_y),\n",
-    "                                   epochs=epochs, verbose=1)\n",
-    "    \n",
-    "        pd.DataFrame.from_dict(score.history).to_csv('./outputs/baseline_gender_aug.csv')\n",
+    "        score = gender_model.fit_generator(generator=training_generator,\n",
+    "                               steps_per_epoch=size_train // batch_size,\n",
+    "                               validation_data=(test_x, test_y),\n",
+    "                               epochs=epochs, verbose=1)\n",
     "\n",
+    "        pd.DataFrame.from_dict(score.history).to_csv('./outputs/baseline_gender_aug.csv')\n",
     "        plt.plot(score.history['val_loss'], label='val_loss')\n",
     "        plt.plot(score.history['loss'], label='train_loss')\n",
     "        plt.legend(loc='upper right')\n",
     "        plt.ylim([2.5,5])\n",
-    "        plt.savefig('baseline_gender_aug.png')\n",
+    "        plt.savefig('./outputs/baseline_gender_aug.png')\n",
     "        plt.show()\n",
-    "\n",
     "        \n",
     "    elif baseline:\n",
     "        score = gender_model.fit(train_x, train_y, epochs=epochs, batch_size=batch_size, validation_data=(test_x, test_y))\n",
     "        model='_'\n",
-    "        pd.DataFrame.from_dict(scores).to_csv('baseline_gender_'+model+'.csv')\n",
-    "        plt.plot(score['loss'], label='loss')\n",
-    "        plt.plot(score['val_loss'], label='val_loss')\n",
+    "        pd.DataFrame.from_dict(scores).to_csv('./outputs/baseline_gender_'+model+'.csv')\n",
+    "        plt.plot(score.history['loss'], label='loss')\n",
+    "        plt.plot(score.history['val_loss'], label='val_loss')\n",
     "        plt.legend(loc='upper right')   \n",
-    "        plt.savefig('baseline_gender_'+model+'.png')\n",
+    "        plt.savefig('./outputs/baseline_gender_'+model+'.png')\n",
     "        plt.show()\n",
     "\n",
     "else:\n",
     "    #pre-trained weights for age prediction: https://drive.google.com/file/d/1YCox_4kJ-BYeXq27uUbasu--yz28zUMV/view?usp=sharing\n",
-    "    age_model.load_weights(\"gender_model_weights.h5\")"
+    "    age_model.load_weights(\"./trained_models/gender_model_weights.h5\")"
    ]
   },
   {
@@ -398,8 +384,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import classification_report, confusion_matrix\n",
-    "\n",
     "pred_list = []; actual_list = []\n",
     "\n",
     "for i in predictions:\n",
@@ -429,7 +413,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
